# q_rlstc

./: .gitignore  README.md  README3.md  pyproject.toml
docs/: Justifications.md  README.md  TechnicalDoc.md  TechnicalDoc2.md  technical_reference_part1.md  technical_reference_part2.md
docs/wiki/: api_reference.md  architecture.md  benchmarking.md  comparison.md  compute_backends.md  debugging.md  distance_and_clustering.md  experimental_design.md  justifications.md  mdp_and_rewards.md  noise_and_hardware.md  quantum_circuit.md  roadmap_v2.md  roadmap_v4.md  technical_deep_dive.md  training_pipeline.md  visualization_and_plotting.md
experiments/: compare_versions.py  data_bridge.py  generate_datasets.py  prepare_real_datasets.py  run_cross_comparison.py  run_experiment.py  run_full_benchmark.py  run_nisq_comparison.py  run_synth_demo.py
experiments/datasets/: metadata.json  real_datasets_metadata.json
q_rlstc/: __init__.py  accelerator.py  config.py
q_rlstc/clustering/: __init__.py  classical_kmeans.py  hybrid_kmeans.py  metrics.py  pickle_loader.py  trajdistance.py
q_rlstc/data/: __init__.py  features.py  hilbert.py  ied_subtrajs_100  ied_subtrajs_800  load_dataset.py  preprocessing.py  real_datasets.py  synthetic.py  tdrive_clustercenter  tdrive_clustercenter_12  tdrive_clustercenter_14  tdrive_clustercenter_5  tdrive_clustercenter_8  tdrive_testset0  (+4 more)
tests/: README.md  test_angle_encoding.py  test_hea_depth.py  test_kmeans_update.py  test_metrics.py  test_replay_buffer.py  test_spsa.py  test_swaptest_distance_basic.py  test_training_smoke.py
(+21 files in other folders)
