[project]
name = "q-rlstc"
version = "0.1.0"
description = "Quantum-Enhanced RL for Sub-Trajectory Clustering using VQ-DQN"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = {text = "MIT"}
authors = [
    {name = "William Sebbis"}
]
keywords = ["quantum", "reinforcement-learning", "clustering", "trajectory", "qiskit"]

dependencies = [
    "qiskit>=1.0",
    "qiskit-aer>=0.13",
    "numpy>=1.20",
    "scipy>=1.7",
    "scikit-learn>=1.0",
    "tqdm>=4.60",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v"

[tool.hatch.build.targets.wheel]
packages = ["q_rlstc"]
